fix img too big in md and comments in unposted article

--- a/app/assets/stylesheets/component/_markdown.scss
+++ b/app/assets/stylesheets/component/_markdown.scss
@@ -73,4 +73,7 @@
         border: none;
     }
 
+    img {
+        max-width: 500px;
+    }
 }
